// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`globalAlert > renders correctly with all variants > renders correctly variant danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_danger__coqgso2 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="danger"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant info 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__coqgso3 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="info"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant promotional 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_promotional__coqgso4 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="promotional"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with buttonText and onClickButton 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__coqgso3 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="info"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          Sample GlobalAlert
        </p>
        <button
          class="styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_white__8xt08sd styles_size_small__8xt08sg styles_variant_filled__8xt08si styles_undefined_compound_8__8xt08st"
          type="button"
        >
          Button
        </button>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with children as component 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__coqgso3 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="info"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with closable and onClose 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__coqgso3 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="info"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with default values 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__coqgso3 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="info"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          Simple GlobalAlert
        </p>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with link 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles_info__coqgso3 styles__coqgso1 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_justifyContent_space-between_xxsmall__xf61n477"
      data-variant="info"
    >
      <div
        class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        style="--_1d8tbmb0: 100%;"
      >
        <p
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_white__1do42lsg style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_72__1do42ls3a"
        >
          This is a 
          <a
            class="styles__1pc546m0 styles_prominence_strong__1pc546m4 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodySmallStrong__1pc546ma styles_type_inline__1pc546mc styles_undefined_compound_5__1pc546mj styles__1pc546mn"
            data-variant="inline"
            href="scaleway.com"
          >
            Global Alert
          </a>
            link
        </p>
      </div>
      <button
        class="styles__coqgso0 styles__8xt08s0 styles_disabled_false__8xt08s1 styles_fullWidth_false__8xt08s3 styles_sentiment_primary__8xt08s9 styles_size_xsmall__8xt08sh styles_variant_filled__8xt08si styles_undefined_compound_0__8xt08sl"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
